@@ -11,7 +11,7 @@ color.Neutral=e87112
 color.Impassible=d8ba7c
 
 
-map.hasRelief=false
+map.hasRelief=true
 map.width=3773
 map.height=1830
 
